--- a/indes.html
+++ b/indes.html
@@ -8,5 +8,6 @@
 <body>
     <h1>first website with git</h1>
     <h2>now its time to push to git</h2>
+    <p>khub tough re khub tough </p>
 </body>
 </html>
